<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:lines="2"
        android:maxEms="4"
        android:text="@string/currency_converter"
        android:textColor="#2196F3"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/_00_00_0000"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/from"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/spinner_from"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/spinner_from"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="16dp"
        android:contentDescription="@string/eur"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_euro"
            tools:ignore="ContentDescription"
            app:tint="#FF2196F3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eur"
            android:textSize="28sp"
            android:textColor="#2196F3"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/img_btn_replace"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#FF2196F3"
        android:src="@drawable/ic_replace"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_from"
        app:layout_constraintStart_toEndOf="@+id/spinner_from"
        app:layout_constraintTop_toTopOf="@+id/spinner_from"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/to"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_to"
        app:layout_constraintStart_toStartOf="@+id/spinner_to"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinner_to"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_btn_replace"
        app:layout_constraintTop_toTopOf="@+id/spinner_from" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_to"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_convert"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_margin="16dp"
        android:text="@string/convert"
        android:textStyle="bold"
        android:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_amount" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn_convert"
        app:layout_constraintTop_toBottomOf="@+id/btn_convert" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_00_00"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:maxLines="1"
        android:maxEms="3"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>